force-app/main/default/objects/Field_Log_Config__c/Field_Log_Config__c.object-meta.xml
<CustomObject>
    <description>Object-level field history logging definition for a source object.</description>
    <label>Field Log Config</label>
    <nameField>
        <label>Field Log Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Log Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>