force-app/main/default/objects/Field_Log_Config__c/fields/Async_Mode__c.field-meta.xml
<CustomField>
    <fullName>Async_Mode__c</fullName>
    <description>How field-change rows are written to the Big Object.</description>
    <label>Async Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PlatformEvent</fullName>
                <default>true</default>
                <label>PlatformEvent</label>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
            <value>
                <fullName>Synchronous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>