force-app/main/default/objects/Field_Log_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable field history logging for this object.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>