force-app/main/default/objects/Field_Log_Config__c/fields/Log_On_Create__c.field-meta.xml
<CustomField>
    <fullName>Log_On_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capture changes on record creation.</description>
    <label>Log On Create</label>
    <type>Checkbox</type>
</CustomField>