force-app/main/default/objects/Field_Log_Config__c/fields/Log_On_Delete__c.field-meta.xml
<CustomField>
    <fullName>Log_On_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capture changes on record deletion.</description>
    <label>Log On Delete</label>
    <type>Checkbox</type>
</CustomField>