force-app/main/default/objects/Field_Log_Config__c/fields/Log_On_Undelete__c.field-meta.xml
<CustomField>
    <fullName>Log_On_Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capture changes on record undeletion.</description>
    <label>Log On Undelete</label>
    <type>Checkbox</type>
</CustomField>