force-app/main/default/objects/Field_Log_Config__c/fields/Log_On_Update__c.field-meta.xml
<CustomField>
    <fullName>Log_On_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Capture changes on record update.</description>
    <label>Log On Update</label>
    <type>Checkbox</type>
</CustomField>