force-app/main/default/objects/Field_Log_Config__c/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <description>TTL for purge job (0 = infinite).</description>
    <label>Retention Days</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>