force-app/main/default/objects/Field_Log_Config__c/fields/Source_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Label__c</fullName>
    <description>Display label of the object to track field history for.</description>
    <label>Source Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>