force-app/main/default/objects/Field_Log_Config__c/fields/Trigger_Generated__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the generator once the field-log trigger exists.</description>
    <label>Trigger Generated</label>
    <type>Checkbox</type>
</CustomField>